--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequestNotFulfilled.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequestNotFulfilled.cshtml
@@ -9,6 +9,7 @@
         <thead>
             @if (ViewBag.UserRole == "agency")
             {
+
                 <tr>
                     <th>
                         Client Account #
@@ -34,6 +35,7 @@
             }
             else
             {
+
                 <tr>
                     <th>
                         PIMS Account #
@@ -66,6 +68,7 @@
             {
                 if (ViewBag.UserRole == "agency")
                 {
+
                 <tr>
                     <td>@pimsRecord.MSIMediaRequestResponse.ACCOUNT
                     </td>
@@ -79,17 +82,19 @@
                     </td>
                     <td>@pimsRecord.MediaStatus
                     </td>
-                    <td style="">@Html.ActionLink("Request Status Update", "Create", new { id = pimsRecord.MSIMediaRequestResponse.ACCOUNT })
+                    <td style="">
+                        @Html.ActionLink("Request Status Update", "MediaRequestStatusUpdate", new { id = pimsRecord.MSIMediaRequestTypes.Id }, new { @class = "statusUpdate" })
                     </td>
                 </tr> 
                 }
                 else
                 {
+
                 <tr>
                     <td>@pimsRecord.MSIMediaRequestResponse.ACCOUNT
                     </td>
                     <td>@pimsRecord.MSIMediaRequestResponse.AgencyId
-                    </td>                    
+                    </td>
                     <td>@pimsRecord.MSIMediaRequestResponse.Portfolio
                     </td>
                     <td>@pimsRecord.MSIMediaRequestResponse.NAME
@@ -108,3 +113,22 @@
         </tbody>
     </table>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('a.statusUpdate').click(function () {
+            event.preventDefault();
+        
+            var url = $(this).attr('href');
+            $.ajax({
+                url: url,
+                async: true,
+                success: function (data) {
+                    alert('Request for status update has been submitted');      
+                },
+                error: function (xhr, status, error) {
+
+                }
+            });
+        });
+    });
+</script>
