--- a/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequestNotFulfilled.cshtml
+++ b/CascadeSolution/Cascade.Web/Areas/Recourse/Views/Media/_mediaRequestNotFulfilled.cshtml
@@ -105,7 +105,7 @@
                     </td>
                     <td>@pimsRecord.MediaStatus
                     </td>
-                    <td style="">@Html.ActionLink("View Details", "MediaFulfillment", new { id = pimsRecord.MSIMediaRequestResponse.ACCOUNT })
+                    <td style="">@Html.ActionLink("View Details", "MediaFulfillment", new { id = pimsRecord.MSIMediaRequestResponse.Id })
                     </td>
                 </tr> 
                 }
